--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -67,7 +67,7 @@ published: 28.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">US-MD-Lanham</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/2u/jobs/4371587002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
+<h5><a href='https://boards.greenhouse.io/2u/jobs/4371587002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
 <p><span class="badge badge-light">US-MD-Lanham</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -170,7 +170,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
@@ -178,7 +178,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... The Business Intelligence Analyst will be responsible for researching, collecting, 
 analyzing and reporting operational and business data from multiple sources.</p>
@@ -251,7 +251,7 @@ scalable data pipelines to support various data integrations; Propose, build, an
 <p>4 napja ... Apply online for the job of Business Intelligence Analyst at Adevinta Classified 
 Media Hungary Kft.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
+<h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
       Analyst, Business Intelligence - Sivantos
     </a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
@@ -261,13 +261,13 @@ Media Hungary Kft.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Chicago, IL; Full Time; Data Analytics; Mid Level. Share. Who We Are: We 
 believe a workplace food program is something employees should love and look
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
+<h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As our Business Intelligence Analyst you will be our driver and executer in 
 developing and implementing metrics and reporting to improve our business and
@@ -418,7 +418,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -426,7 +426,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://carwow.workable.com/j/A1267A5BE1'>carwow - Jobs: Business Intelligence Manager - Apply online</a></h5> 
+<h5><a href='https://carwow.workable.com/j/A1267A5BE1'>carwow - Jobs: Business Intelligence Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -438,7 +438,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
