--- a/android-developer.html
+++ b/android-developer.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Greece</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vibrenthealth/job/o93EafwK'>Vibrent Health Careers - Sr. Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vibrenthealth/job/o93EafwK'>Vibrent Health Careers - Sr. Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We enjoy working with the latest tools and technologies including enterprise 
 mobile apps, fitness sensors, medical devices, cloud computing, machine 
@@ -168,12 +168,12 @@ accepted) at Kapten.</p>
 Have you ever dreamed of making a real impact on the way people access the 
 web?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cellular.join.com/jobs/245965-android-developer-m-w-d?pid=5b8fa8e2510130b4d967&utm_source=alleskralle&utm_medium=free&utm_campaign=alleskralle%2Bbasic&utm_content=android%2Bdeveloper%2Bm%2Bw%2Bd'>Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://cellular.join.com/jobs/245965-android-developer-m-w-d?pid=5b8fa8e2510130b4d967&utm_source=alleskralle&utm_medium=free&utm_campaign=alleskralle%2Bbasic&utm_content=android%2Bdeveloper%2Bm%2Bw%2Bd'>Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 3 Tagen ... CELLULAR GmbH has a job opening for Android Developer (m/w/d) in Vienna (
 published: 20.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8'>0708 - Stong Mid Android Developer at Workforce Source</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8'>0708 - Stong Mid Android Developer at Workforce Source</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... 0708 - Stong Mid Android Developer. ????, ??????? Full-time. Our client is a 
 European software development company providing services worldwide since?...</p>
@@ -242,11 +242,11 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://minderacraft.workable.com/j/B5562EDB76'>Mindera - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://minderacraft.workable.com/j/B5562EDB76'>Mindera - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -295,7 +295,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -420,7 +420,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Halifax, NS</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='http://REDspace.recruiterbox.com/jobs/fk0366y'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://REDspace.recruiterbox.com/jobs/fk0366y'>
     Android Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -442,7 +442,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999690987897-android-developer'>Greppy Systems Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -454,7 +454,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://grofers.recruiterbox.com/jobs/fk03hug'>
+<h5><a href='http://grofers.recruiterbox.com/jobs/fk03hug'>
     Full Stack Android Developer at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
